# mutaskell

./: .gitignore  CLAUDE.md  LICENSE  MuCheck.cabal  README.md  ROADMAP.md  Test-Mutaskell-AnalysisSummary.html  Test-Mutaskell-Config.html  Test-Mutaskell-Interpreter.html  Test-Mutaskell-MuOp.html  Test-Mutaskell-Mutation.html  Test-Mutaskell-TestAdapter-AssertCheck.html  Test-Mutaskell-TestAdapter-AssertCheckAdapter.html  Test-Mutaskell-TestAdapter.html  Test-Mutaskell-Tix.html  Test-Mutaskell-Utils-Common.html  Test-Mutaskell-Utils-Helpers.html  Test-Mutaskell-Utils-Print.html  Test-Mutaskell-Utils-Syb.html  Test-Mutaskell.html  changes.md  doc-index-126.html  doc-index-42.html  doc-index-46.html  doc-index-61.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-O.html  doc-index-P.html  (+11 more)
.github/: dependabot.yml
.github/workflows/: complexity.yml  format.yml  haskell-ci.yml  hlint.yml  mutation.yml  osv-scanner.yml  pages.yml
.serena/: project.yml
Examples/: AssertCheckTest.hs  Main.hs
app/: Main.hs
app/App/: Exit.hs  Filter.hs  Opts.hs  Output.hs  Worker.hs
schema/: mucheck-config-schema.json
setups/: conservative.mucheck.yaml  diff-only.mucheck.yaml  github-actions.yml  gitlab-ci.yml  strict.mucheck.yaml
src/: Test.Mutaskell.AnalysisSummary.html  Test.Mutaskell.Config.html  Test.Mutaskell.Interpreter.html  Test.Mutaskell.MuOp.html  Test.Mutaskell.Mutation.html  Test.Mutaskell.TestAdapter.AssertCheck.html  Test.Mutaskell.TestAdapter.AssertCheckAdapter.html  Test.Mutaskell.TestAdapter.html  Test.Mutaskell.Tix.html  Test.Mutaskell.Utils.Common.html  Test.Mutaskell.Utils.Helpers.html  Test.Mutaskell.Utils.Print.html  Test.Mutaskell.Utils.Syb.html  Test.Mutaskell.html
src/Test/: MuCheck.hs  Muskell.hs  Mutaskell.hs
src/Test/MuCheck/: AnalysisSummary.hs  Config.hs  Interpreter.hs  MuOp.hs  Mutation.hs  TestAdapter.hs  Tix.hs
src/Test/MuCheck/TestAdapter/: AssertCheck.hs  AssertCheckAdapter.hs
src/Test/MuCheck/Utils/: Common.hs  Helpers.hs  Print.hs  Syb.hs
src/Test/Muskell/: AnalysisSummary.hs  Config.hs  Interpreter.hs  MuOp.hs  Mutation.hs  TestAdapter.hs  Tix.hs
src/Test/Muskell/TestAdapter/: AssertCheck.hs  AssertCheckAdapter.hs
src/Test/Muskell/Utils/: Common.hs  Helpers.hs  Print.hs  Syb.hs
src/Test/Mutaskell/: AnalysisSummary.hs  Config.hs  Interpreter.hs  MuOp.hs  Mutation.hs  TestAdapter.hs  Tix.hs
src/Test/Mutaskell/TestAdapter/: AssertCheck.hs  AssertCheckAdapter.hs
src/Test/Mutaskell/Utils/: Common.hs  Helpers.hs  Print.hs  Syb.hs
test/: Here.hs  Spec.hs
test/Test/MuCheck/: CLISpec.hs  ConfigSpec.hs  IntegrationSpec.hs  MuVarCoverageSpec.hs  MutationSpec.hs  TixSpec.hs
test/Test/MuCheck/MutationSpec/: Helpers.hs
test/Test/MuCheck/Utils/: CommonSpec.hs  PrintSpec.hs  SybSpec.hs
test/Test/Muskell/: CLISpec.hs  ConfigSpec.hs  IntegrationSpec.hs  MuVarCoverageSpec.hs  MutationSpec.hs  TixSpec.hs
test/Test/Muskell/MutationSpec/: Helpers.hs
test/Test/Muskell/Utils/: CommonSpec.hs  PrintSpec.hs  SybSpec.hs
test/Test/Mutaskell/: CLISpec.hs  ConfigSpec.hs  IntegrationSpec.hs  MuVarCoverageSpec.hs  MutationSpec.hs  TixSpec.hs
test/Test/Mutaskell/MutationSpec/: Helpers.hs
test/Test/Mutaskell/Utils/: CommonSpec.hs  PrintSpec.hs  SybSpec.hs
