cabal-version:       3.4
name:                MuCheck
version:             0.5.3
synopsis:            Automated Mutation Testing
description:         This package defines a mutation analysis library for haskell
                     programs. It does this by parsing the haskell source, and
                     replacing a few of the common haskell functions and operators
                     with other, but similar operators and functions, and running
                     the testsuite to check whether the difference has been
                     detected.
homepage:            https://github.com/jonbaldie/mucheck
license:             GPL-2.0-or-later
license-file:        LICENSE
author:              Duc Lee <ledu@onid.oregonstate.edu>,
                     Rahul Gopinath <rahul@gopinath.org>,
                     Jonathan Baldie <baldiescotty@gmail.com>
maintainer:          jon@jonbaldie.com
category:            Testing
extra-doc-files:     changes.md
-- Active CI (mutation.yml) verifies GHC 9.12.1; the broader matrix in
-- haskell-ci.yml is disabled (if: false) because it violates the 5-minute
-- CI budget.  ghc-exactprint >= 1.12 requires GHC 9.12+.
tested-with:         GHC ==9.12.1

source-repository    head
  type:              git
  location:          https://github.com/jonbaldie/mucheck.git

source-repository    this
  type:              git
  location:          https://github.com/jonbaldie/mucheck.git
  tag:               0.5.3

common dependencies
  build-depends:    base >=4 && <5,
                    ghc >= 9.12 && < 9.13,
                    ghc-exactprint >= 1.12 && < 1.13,
                    syb >= 0.4.0,
                    time >= 1.4.0.1,
                    hint >= 0.3.1.0,
                    mtl>=2.1.2,
                    random >= 1.2.1,
                    directory >= 1.2.0.1,
                    temporary >= 1.1,
                    hashable >= 1.2,
                    hpc >= 0.5.1.1,
                    template-haskell >= 2.5.0,
                    process >= 1.6.0,
                    unix >= 2.7,

library
  import:           dependencies
  exposed-modules:  Test.MuCheck
                    Test.MuCheck.MuOp
                    Test.MuCheck.Config
                    Test.MuCheck.Interpreter
                    Test.MuCheck.Mutation
                    Test.MuCheck.Utils.Syb
                    Test.MuCheck.Utils.Common
                    Test.MuCheck.Utils.Print
                    Test.MuCheck.TestAdapter
                    Test.MuCheck.TestAdapter.AssertCheck
                    Test.MuCheck.TestAdapter.AssertCheckAdapter
                    Test.MuCheck.AnalysisSummary
                    Test.MuCheck.Utils.Helpers
                    Test.MuCheck.Tix
  ghc-options:      -Wall
  default-language: Haskell2010
  hs-source-dirs:   src

executable mucheck
  main-is:          Main.hs
  other-modules:    App.Opts
                    App.Exit
                    App.Filter
                    App.Output
                    App.Worker
  ghc-options:      -Wall
  build-depends:    base >=4 && <5,
                    time >= 1.4.0.1,
                    process >= 1.6.0,
                    directory >= 1.3,
                    optparse-applicative >= 0.16,
                    yaml >= 0.11,
                    aeson >= 2.0,
                    bytestring >= 0.10,
                    MuCheck
  default-language: Haskell2010
  hs-source-dirs:   app

executable sample-test
  main-is:          Examples/Main.hs
  other-modules:    Examples.AssertCheckTest
  build-depends:    base >=4 && <5,
                    MuCheck
  default-language: Haskell2010

test-suite spec
  import:           dependencies
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test app
  main-is:          Spec.hs
  other-modules:    Here
                    App.Opts
                    App.Exit
                    App.Filter
                    App.Output
                    App.Worker
                    Test.MuCheck.CLISpec
                    Test.MuCheck.ConfigSpec
                    Test.MuCheck.IntegrationSpec
                    Test.MuCheck.MutationSpec
                    Test.MuCheck.MutationSpec.Helpers
                    Test.MuCheck.MuVarCoverageSpec
                    Test.MuCheck.TixSpec
                    Test.MuCheck.Utils.CommonSpec
                    Test.MuCheck.Utils.PrintSpec
                    Test.MuCheck.Utils.SybSpec
  default-language: Haskell2010
  build-depends:    hspec >= 2.0,
                    MuCheck,
                    directory >= 1.3,
                    optparse-applicative >= 0.16,
                    yaml >= 0.11,
                    aeson >= 2.0,
                    bytestring >= 0.10,
  build-tool-depends: hspec-discover:hspec-discover
